// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> with additional className matches its snapshot 1`] = `
<Attach
  className="y-icon y-icon-attach TEST_CLASSNAME"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
/>
`;

exports[`<Icon /> with block matches its snapshot 1`] = `
<Attach
  className="y-icon y-icon-attach y-icon__isBlock"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
/>
`;

exports[`<Icon /> with color matches its snapshot 1`] = `
<Attach
  className="y-icon y-icon-attach"
  style={
    Object {
      "color": "blue",
      "height": "16px",
      "width": "16px",
    }
  }
/>
`;

exports[`<Icon /> with minimal options matches its snapshot 1`] = `
<Attach
  className="y-icon y-icon-attach"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
/>
`;

exports[`<Icon /> with passed size value matches its snapshot 1`] = `
<Attach
  className="y-icon y-icon-attach"
  style={
    Object {
      "height": "32px",
      "width": "32px",
    }
  }
/>
`;
